# gum-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  utils.rs
wix/: main.wxs
