[package]
name = "gum-rs"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"


[profile.release]
opt-level = 'z'    
lto = true         
codegen-units = 1  
strip = true       
panic = 'abort'    
