[package]
name = "gum-rs"
version = "0.0.2"
description = "Super fast git multiple user config manager. A Rust remake of https://github.com/gauseen/gum"
authors = ["slow-groovin"]
repository = "https://github.com/slow-groovin/gum-rs"
license = "MIT"
edition = "2024"
homepage = "https://github.com/slow-groovin/gum-rs"

[package.metadata.wix]
upgrade-guid = "3BC01186-9FF9-4971-B68E-08BA2FB951EF"
path-guid = "2A9C8ABB-4168-4497-961B-1FE443EBABD2"
license = false
eula = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"


[profile.release]
opt-level = 'z'    
lto = true         
codegen-units = 1  
strip = true       
panic = 'abort'    

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
